# Petri-Foo

./: .gitattributes  .gitignore  AUTHORS  BUGS  BUILD  CMakeLists.txt  CMakeLists.txt.orig  ChangeLog  HACKING  Makefile.am  NEWS  PETRI-FOO_ORIGINAL_FILES  PROFILE  README  ROADMAP  TODO  TODO.specimen  WISHLIST  aclocal.m4Rv  autogen.shRv  config.h.in  configure.ac  coverity  install_manifest.txt  petri-foo.desktop  petri-foo.spec  petri-foo.spec.in  petri-foo.xml
cmake/Modules/: FindGCrypt.cmake
gui/: CMakeLists.txt  audio-settings.c  audio-settings.h  bank-ops.c  bank-ops.h  basic_combos.c  bool_section.c  bool_section.h  channelsection.c  envelopetab.c  float_section.c  global_settings.c  global_settings.h  gui.c  gui.h  idselector.c  lfotab.c  lfotab.h  log_display.c  log_display.h  mastersection.c  mastersection.h  midisection.c  midisection.h  mod_section.c  mod_section.h  mod_src_gui.c  mod_src_gui.h  paramtab.c  patchlist.c  patchlist.h  patchsection.c  petri-foo.c  sample-editor.c  sample-editor.h  sample-selector.c  sampletab.c  sampletab.h  session.c  session.h  (+4 more)
libpetrifoo/: CMakeLists.txt  adsr.c  adsr.h  dish_file.c  dish_file.h  driver.c  driver.h  instance.c  jackdriver.c  jackdriver.h  lfo.c  lfo.h  maths.c  maths.h  midi.c  midi.h  midi_control.h  mixer.c  mixer.h  mod_src.h  msg_log.c  msg_log.h  names.c  patch.c  patch.h  patch_event.c  patch_event.h  patch_set_and_get.c  patch_set_and_get.h  patch_util.c  patch_util.h  petri-foo.h  pf_error.c  pf_error.h  sample.c  sample.h  sync.c  sync.h  ticks.c  ticks.h
libpetrifoo/patch_private/: CMakeLists.txt  err_msg.h  patch_data.c  patch_data.h  patch_defs.c  patch_defs.h  patch_event_data.h  patch_macros.h  patch_voice.c  patch_voice.h
libpetrifui/: CMakeLists.txt  dish_file.c  dish_file.h  file_ops.c  file_ops.h  msg_log.c  msg_log.h
libphin/: AUTHORS  BUGS  CMakeLists.txt  README  TODO  phat.h  phatfanslider.c  phatfanslider.h  phathfanslider.c  phathfanslider.h  phathkeyboard.c  phathkeyboard.h  phatkeyboard.c  phatkeyboard.h  phatprivate.c  phatprivate.h  phatsliderbutton.c  phatsliderbutton.h  phatvfanslider.c  phatvfanslider.h  phatvkeyboard.c  phatvkeyboard.h  phin.h  phinfanslider.c  phinfanslider.h  phinhfanslider.c  phinhfanslider.h  phinhkeyboard.c  phinhkeyboard.h  phinhslider.c  phinhslider.h  phinkeyboard.c  phinkeyboard.h  phinprivate.c  phinprivate.h  phinslider.c  phinslider.h  phinsliderbutton.c  phinsliderbutton.h  phinvfanslider.c  (+5 more)
pixmaps/: Makefile.am
pixmaps/.svn/: all-wcprops  entries
pixmaps/.svn/text-base/: Makefile.am.svn-base  panic.png.svn-base  specimen.png.svn-base  specimen_small.png.svn-base
sandbox/: CMakeLists.txt  test.c
src/: Makefile.am  adsr.c  adsr.h  alsadriver.c  beef.c  beef.h  control.h  dish_file.c  dish_file.h  driver.c  driver.h  gprof-helper.c  instance.c  instance.h  jackdriver.c  jackdriver.h  lashdriver.c  lashdriver.h  lfo.c  lfo.h  maths.c  maths.h  midi.c  midi.h  midi_control.h  mixer.c  mixer.h  mod_src.c  mod_src.h  names.c  names.h  p  patch.c  patch.c.orig  patch.h  patch_set_and_get.c  patch_set_and_get.h  patch_util.c  patch_util.h  petri-foo  (+9 more)
src/gui/: Makefile.am  amptab.c  amptab.h  audio-settings.c  audio-settings.h  bank-ops.c  bank-ops.h  basic_combos.c  basic_combos.h  channelsection.c  channelsection.h  envelopetab.c  envelopetab.h  filtertab.c  filtertab.h  float_section.h  gui.c  gui.h  idselector.c  idselector.h  lfotab.c  lfotab.h  mastersection.c  mastersection.h  midisection.c  midisection.h  mod_section.c  mod_section.h  mod_src.c  mod_src.h  mod_src_gui.c  mod_src_gui.h  mod_src_opt.c  mod_src_opt.h  paramtab.c  paramtab.h  patchlist.c  patchlist.h  patchsection.c  patchsection.h  (+15 more)
src/patch_private/: Makefile.am  patch_data.c  patch_data.h  patch_data.h.orig  patch_defs.c  patch_defs.h  patch_macros.h  patch_voice.c  patch_voice.h
src/private/: patch_data.h
